# vault-rag

./: .env.example  .gitignore  .vault-rag.yaml.example  Improvements.md  LICENSE  README.md  pyproject.toml
src/vault_rag/: cli.py  config.py  error.py  ingest.py  query.py
