[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vault-rag"
version = "0.1.0"
description = "Minimal local RAG over an Obsidian vault using Ollama + LlamaIndex + Chroma"
readme = "README.md"
requires-python = "<3.13, >=3.11"
dependencies = [
  "llama-index>=0.10.0",
  "llama-index-vector-stores-chroma",
  "llama-index-embeddings-ollama",
  "llama-index-llms-ollama",
  "chromadb>=0.4.0",
]

[project.scripts]
vault = "vault_rag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vault_rag"]
