[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vault-rag"
version = "0.1.0"
description = "Minimal local RAG over an Obsidian vault using Ollama + LlamaIndex + Chroma"
readme = "README.md"
requires-python = "<3.13, >=3.11"
dependencies = [
  "llama-index>=0.10.0",
  "llama-index-vector-stores-chroma",
  "llama-index-embeddings-ollama",
  "llama-index-llms-ollama",
  "chromadb>=0.4.0",
  "requests>=2.28.0",
]

[project.scripts]
vault = "vault_rag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vault_rag"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.lint.flake8-type-checking]
strict = true
